# branding

./: .gitignore  README.md  everything.py  ffpy.py  flake.nix  fonts.py  svg-diff-view.xsl  svg-diff2.sh  svg-multiline.py  testhb.py
.github/workflows/: check.yml  netlify-deploy.yml  release-guide.yml  release-npm-package.yaml
LICENSES/: Jura-OFL-1.1.txt
checks/: default.nix
dev-shells/: default.nix
docs/provenance/: README.md  jura-font-attribution-20251013-cyreal.txt  nixos-logo-permission-20161002-cuthbertson.txt  nixos-logo-permission-20250917-cuthbertson.txt
formatter/: default.nix
formatter-module/: default.nix
hydra-jobs/: default.nix
legacy-packages/: default.nix
nixos-configurations/: default.nix
nixos-configurations/ci-vm/: configuration.nix
overlays/: default.nix
overlays/add-typix-library/: overlay.nix
package-sets/python-packages/coloraide/: package.nix
package-sets/python-packages/nixoslogo/: README.md  editable.nix  package.nix  pyproject.toml
package-sets/python-packages/nixoslogo/nixoslogo/: __init__.py  annotations.py  colors.py  core.py  dimensioned.py  helpers.py  logo.py  logomark.py  logotype.py
package-sets/python-packages/nixoslogo/nixoslogo/artifacts/: clearspace.py  matrix.py  misuse.py
package-sets/python-packages/svgpathtools/: package.nix
package-sets/top-level/jura/: package.nix
package-sets/top-level/matrix-icons/: README.md  main.typ  package.nix
package-sets/top-level/nixos-branding/all-artifacts/: package.nix
package-sets/top-level/route159/: package.nix
scripts/: get-all-imagery.sh
(+228 files in other folders)
